--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,21 +1,37 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 apply plugin: 'io.fabric'
 
 
+
 android {
-    compileSdkVersion 26
+    compileSdkVersion 28
     //noinspection GradleDependency
-    buildToolsVersion '27.0.3'
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "ws.wolfsoft.shoeshappiness"
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -34,31 +50,54 @@ dependencies {
     implementation('com.github.florent37:materialviewpager:1.0.3.2@aar') {
         transitive = true
     }
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.8@aar') {
+        transitive = true;
+    }
     implementation('com.airbnb.android:lottie:1.0.1') { exclude group: 'com.android.support' }
-    //noinspection GradleDependency
+    ///noinspection GradleDependency
     //compile 'com.iceteck.silicompressorr:silicompressor:2.1'
-    implementation 'com.google.firebase:firebase-core:15.0.2'
+
+    //---------------------------------------------------------SERVICES ANDROID------------------------------------------------------------------------------
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.4.7'
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    implementation 'com.google.firebase:firebase-auth:15.1.0'
-    implementation 'com.android.support:support-v4:26.1.0'
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.2'
-    implementation 'com.google.firebase:firebase-database:15.0.1'
-    implementation 'com.google.firebase:firebase-storage:15.0.2'
-    implementation 'com.google.firebase:firebase-crash:15.0.2'
-    implementation 'com.google.firebase:firebase-messaging:15.0.2'
-    implementation 'com.firebaseui:firebase-ui-database:1.2.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:multidex:1.0.3'
     //implementation 'com.firebaseui:firebase-ui-auth:4.0.0-SNAPSHOT'
-    implementation 'com.android.support:cardview-v7:26.1.0'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+
+    //--------------------------------------------------------SERVICES FIREBASE-----------------------------------------------------------------------------------------
+    implementation 'com.google.firebase:firebase-auth:16.1.0'
+    implementation 'com.google.firebase:firebase-core:16.0.6'
+    implementation 'com.google.firebase:firebase-database:16.0.6'
+    implementation 'com.google.firebase:firebase-storage:15.0.2'
+    implementation 'com.google.firebase:firebase-crash:16.2.1'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
+    implementation 'com.firebaseui:firebase-ui-database:1.2.0'
+    implementation 'com.google.firebase:firebase-inappmessaging-display:17.0.5'
+
+//-------------------------------------------------------------ARSENAL D'API-------------------------------------------------------------------------------------------------
+    //compresser des images
     implementation 'id.zelory:compressor:2.0.0'
+    implementation 'com.squareup.okhttp:okhttp:2.7.5'
+    //gestionnaire d'images
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.squareup.okhttp:okhttp:2.5.0'
-    implementation 'com.google.firebase:firebase-messaging:15.0.2'
+    //Zoomer sur des images
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+    //transitions d'images
+    implementation 'com.github.Binary-Finery:Bungee:master-SNAPSHOT'
+    implementation 'com.emmanuelkehinde:shutdown:1.0.1'
+    implementation 'com.southernbox:SpringScrollView:1.0.0'
+    //Boucle de scroll d'un layout
+    implementation 'com.github.sgaikar1:AutoScrollingLayout:2.0.0'
+    implementation 'com.southernbox:SpringScrollView:1.0.0'
+    //API carteBancaire verification
+    implementation 'com.craftman.cardform:cardform:0.0.2'
+    //implementation 'com.github.shrikanth7698:Night-Mode-Button:V1.0'
 
     implementation 'com.jakewharton:butterknife:8.8.1'
     testImplementation 'junit:junit:4.12'
